Use position fixed for header and remove unnecessary scrollbars

--- a/client/src/assets/styles/global.scss
+++ b/client/src/assets/styles/global.scss
@@ -13,7 +13,6 @@ body {
   font-size: ($base-size * 1.3);
   line-height: 1.7;
   letter-spacing: 0.5px;
-  overflow-y: scroll;
   min-height: 100vh;
 }
 
