--- a/client/src/components/layout/Header/Header.module.scss
+++ b/client/src/components/layout/Header/Header.module.scss
@@ -1,11 +1,13 @@
 @import '../../../assets/styles/settings.scss';
 
 .root {
+  position: fixed;
+  z-index: 99999;
   width: 100%;
   background-color: $color-main-light;
   display: flex;
   justify-content: space-between;
-  height: 60px;
+  height: $headerHeight;
   align-items: center;
   padding: 0 10px;
   box-shadow: .1px .1px .1px .1px $color-main-light;
