--- a/client/src/components/layout/MainLayout/MainLayout.module.scss
+++ b/client/src/components/layout/MainLayout/MainLayout.module.scss
@@ -2,7 +2,6 @@
 
 .root {
   .content {
-    height: calc(100vh - 60px);
-    overflow-y: scroll;
+    padding-top: $headerHeight;
   }
 }
