--- a/client/src/components/views/Home/Homepage.module.scss
+++ b/client/src/components/views/Home/Homepage.module.scss
@@ -7,7 +7,7 @@
     background-attachment: fixed;
     opacity: .8;
     width: 100%;
-    height: calc(100vh - 60px);
+    height: calc(100vh - #{$headerHeight});
     position: relative;
   }
 
